--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.3",
+    "next": "^14.0.3",
+    "npm": "^10.2.4",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5"
